--- a/Infoczytnik.html
+++ b/Infoczytnik.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>WH40k Data-Slate — Infoczytnik</title>
 
+<!-- Google Fonts (fallback do Calibri/Arial jeśli brak internetu) -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Cinzel:wght@400;700&family=Rajdhani:wght@400;600&family=Black+Ops+One&family=Staatliches&family=Orbitron:wght@400;700&family=Questrial&family=Russo+One&display=swap" rel="stylesheet">
@@ -14,6 +15,7 @@
     --accent:#00ff66;
     --font: Calibri, Arial, sans-serif;
 
+    /* Bezpieczne marginesy tekstu */
     --screen-top: 14%;
     --screen-right: 14%;
     --screen-bottom: 22%;
@@ -27,11 +29,6 @@
     /* Domyślne kolory prefix/suffix (można nadpisać z GM) */
     --prefix-color: rgba(255,255,255,.88);
     --suffix-color: rgba(255,255,255,.86);
-
-    /* Efekt "transmission" — zostawiony w kodzie, ale uruchamianie jest WYŁĄCZONE */
-    --tx-bright-peak: 3.00;
-    --tx-jitter: 15px;
-    --tx-duration: 3s;
   }
 
   *{box-sizing:border-box}
@@ -65,7 +62,7 @@
     pointer-events:none;
   }
 
-  /* CRT / Scanlines overlay */
+  /* CRT / Scanlines overlay (to NIE jest drganie tekstu) */
   .crt::before{
     content:"";
     position:absolute;
@@ -115,40 +112,6 @@
     display:block;
 
     text-shadow: 0 2px 6px rgba(0,0,0,.70);
-  }
-
-  /* ====== TRANSMISSION EFFECT (zostawione w CSS, ale NIEURUCHAMIANE) ====== */
-  @keyframes txPulse {
-    0%   { filter: brightness(1.00); opacity: 1; }
-    10%  { filter: brightness(var(--tx-bright-peak)); opacity: 1; }
-    22%  { filter: brightness(.60); opacity: .85; }
-    38%  { filter: brightness(calc(var(--tx-bright-peak) * 0.85)); opacity: 1; }
-    55%  { filter: brightness(.78); opacity: .90; }
-    75%  { filter: brightness(calc(var(--tx-bright-peak) * 0.55)); opacity: 1; }
-    100% { filter: brightness(1.00); opacity: 1; }
-  }
-
-  @keyframes txJitter {
-    0%   { transform: translate(0,0); }
-    10%  { transform: translate(calc(var(--tx-jitter) * 0.55), calc(var(--tx-jitter) * -0.40)); }
-    20%  { transform: translate(calc(var(--tx-jitter) * -0.65), calc(var(--tx-jitter) * 0.45)); }
-    30%  { transform: translate(calc(var(--tx-jitter) * 0.80), 0px); }
-    40%  { transform: translate(calc(var(--tx-jitter) * -0.95), calc(var(--tx-jitter) * -0.30)); }
-    50%  { transform: translate(calc(var(--tx-jitter) * 0.40), calc(var(--tx-jitter) * 0.70)); }
-    60%  { transform: translate(calc(var(--tx-jitter) * -0.55), calc(var(--tx-jitter) * -0.80)); }
-    70%  { transform: translate(calc(var(--tx-jitter) * 0.95), calc(var(--tx-jitter) * 0.40)); }
-    80%  { transform: translate(calc(var(--tx-jitter) * -0.80), calc(var(--tx-jitter) * 0.10)); }
-    90%  { transform: translate(calc(var(--tx-jitter) * 0.25), calc(var(--tx-jitter) * -0.65)); }
-    100% { transform: translate(0,0); }
-  }
-
-  .tx-on{
-    animation: txPulse var(--tx-duration) ease-out 1;
-  }
-  .tx-on .msg,
-  .tx-on .prefixRow,
-  .tx-on .suffixRow{
-    animation: txJitter .6s linear 5;
   }
 
   .prefixRow{
@@ -207,6 +170,7 @@
     white-space: pre-wrap;
   }
 
+  /* Audio unlock overlay */
   .unlock{
     position:fixed;
     inset:0;
@@ -415,34 +379,14 @@
     if(d.suffixColor)    document.documentElement.style.setProperty("--suffix-color", String(d.suffixColor));
   }
 
-  // ====== TRANSMISSION EFFECT (WYŁĄCZONE) ======
-  // Ta funkcja dodawała klasę "tx-on" na .screen, uruchamiając animacje:
-  // - puls jasności (txPulse)
-  // - drganie tekstu (txJitter)
-  // Celowo WYŁĄCZONE: chcemy, żeby efekt NIE pojawiał się w ogóle.
-  // W przyszłości można wrócić: odkomentować poniższy blok i wywołania w ping/message.
-  //
-  // function triggerTransmissionEffect(){
-  //   el.screen.classList.remove("tx-on");
-  //   void el.screen.offsetWidth;
-  //   el.screen.classList.add("tx-on");
-  //   setTimeout(()=> el.screen.classList.remove("tx-on"), 3000);
-  // }
-
   function showMessage(prefix, text, suffix){
-    // HARD-KILL: nawet gdyby jakaś starsza wersja dodała klasę, usuwamy ją stale.
-    el.screen.classList.remove("tx-on");
-
     el.prefixLine.textContent = prefix || "";
     el.msg.textContent = text || "";
     el.suffixLine.textContent = suffix || "";
     el.screen.scrollTop = 0;
-
-    // triggerTransmissionEffect(); // WYŁĄCZONE
   }
 
   function clearMessageKeepLayout(){
-    el.screen.classList.remove("tx-on");
     el.prefixLine.textContent = "";
     el.msg.textContent = "";
     el.suffixLine.textContent = "";
@@ -460,9 +404,6 @@
     if(d.nonce && d.nonce === lastNonce) return;
     lastNonce = d.nonce || null;
 
-    // HARD-KILL przy każdej aktualizacji (na wypadek cache/starej wersji)
-    el.screen.classList.remove("tx-on");
-
     const faction = d.faction || "mechanicus";
     const color   = d.color || d.fontColor || "#00ff66";
 
@@ -475,7 +416,6 @@
     }
 
     if(d.type === "ping"){
-      // triggerTransmissionEffect(); // WYŁĄCZONE
       const pingUrl = d.pingUrl ? String(d.pingUrl) : DEFAULT_PING_URL;
       playUrlOnce(pingUrl);
       return;
@@ -483,6 +423,7 @@
 
     if(d.type === "message"){
       const text = d.text ?? "";
+
       let prefix = d.prefix ?? d.prefixText ?? "";
       let suffix = d.suffix ?? d.suffixText ?? "";
 
