--- a/GM.html
+++ b/GM.html
@@ -28,11 +28,6 @@
     button.warn{background:linear-gradient(180deg,#1c0c0c,#120606);border:1px solid rgba(255,120,120,.25);color:#ffb3b3;}
     .small{margin-top:10px;font-size:12px;color:var(--muted)}
     .status{display:inline-block;padding:2px 8px;border-radius:999px;border:1px solid var(--border)}
-    .inline{
-      display:flex;align-items:center;gap:8px;padding:10px 12px;border:1px solid var(--border);
-      border-radius:10px;background:#0f0f0f;flex-wrap:wrap;
-    }
-    .inline .spacer{flex:1}
     .preview{
       margin:10px 0 0 0;padding:10px 12px;border-radius:10px;border:1px dashed rgba(255,255,255,.18);
       background:rgba(0,0,0,.25);color:#cfcfcf;font-family:Consolas,"Courier New",monospace;font-size:13px;white-space:pre-wrap;
@@ -41,13 +36,9 @@
     .chip{padding:8px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.14);background:rgba(0,0,0,.18);cursor:pointer;user-select:none;font-size:13px;color:#eaeaea;}
     .chip span{display:inline-block;width:12px;height:12px;border-radius:3px;margin-right:6px;vertical-align:-2px;border:1px solid rgba(0,0,0,.25)}
 
-    /* ===== NOWY UKŁAD: Losowość fillerów (Prefix/Suffix wyrównanie jak prosisz) ===== */
-    .fillerBox{
-      padding:10px 12px;border:1px solid var(--border);border-radius:10px;background:#0f0f0f;
-    }
-    .fillerTop{
-      display:flex;align-items:center;gap:10px;flex-wrap:wrap;
-    }
+    /* Losowość fillerów — Prefix po lewej, Suffix po prawej, pod Prefix */
+    .fillerBox{padding:10px 12px;border:1px solid var(--border);border-radius:10px;background:#0f0f0f;}
+    .fillerTop{display:flex;align-items:center;gap:10px;flex-wrap:wrap;}
     .fillerTop input[type="checkbox"]{width:18px;height:18px;margin:0}
     .fillerManual{
       margin-top:10px;
@@ -56,22 +47,8 @@
       gap:12px;
       align-items:end;
     }
-    .fillerManual .right{
-      justify-self:end;
-      width:min(260px, 100%);
-    }
-    .fillerManual .left{
-      width:min(260px, 100%);
-    }
-    .miniLabel{
-      color:#777;
-      font-size:12px;
-      margin-bottom:6px;
-      display:block;
-    }
-    .pairRow{
-      display:flex;gap:10px;align-items:center;justify-content:flex-end;
-    }
+    .miniLabel{color:#777;font-size:12px;margin-bottom:6px;display:block;}
+    .pairRow{display:flex;gap:10px;align-items:center;justify-content:flex-end;}
     .pairRow b{color:#bdbdbd;font-weight:600}
     .pairRow input[type="number"]{width:110px}
   </style>
@@ -82,7 +59,6 @@
     <div class="card">
 
       <div class="row">
-        <!-- LEWA KOLUMNA -->
         <div class="col">
           <label>Frakcja / layout</label>
           <select id="faction">
@@ -96,25 +72,21 @@
             <option value="chaos_undivided">Chaos Undivided</option>
           </select>
 
-          <!-- (5) Szybkie kolory wiadomości + BIAŁY -->
           <label>Kolor fontu (treść wiadomości)</label>
           <input type="color" id="fontColor" value="#00ff66" />
-          <div class="chips" id="msgColorChips">
+          <div class="chips">
             <div class="chip" data-target="msg" data-color="#00ff66"><span style="background:#00ff66"></span>Zielony</div>
             <div class="chip" data-target="msg" data-color="#ff3333"><span style="background:#ff3333"></span>Czerwony</div>
             <div class="chip" data-target="msg" data-color="#d4af37"><span style="background:#d4af37"></span>Złoty</div>
             <div class="chip" data-target="msg" data-color="#ffffff"><span style="background:#ffffff"></span>Biały</div>
           </div>
 
-          <!-- (2) Wielkość fontu treści -->
           <label>Wielkość fontu (treść wiadomości) — px</label>
           <input type="number" id="msgFontSize" min="12" max="80" step="1" value="28" />
 
           <hr style="border:none;border-top:1px solid rgba(255,255,255,.08);margin:14px 0;">
 
-          <!-- (1) Kolor Prefix+Suffix (wspólny) -->
           <label>Kolor Prefix + Suffix (wspólny)</label>
-          <!-- daję tekstowe pole żeby obsłużyć rgba() i hex; dla wygody też color-picker -->
           <div class="row" style="gap:10px;">
             <div class="col" style="min-width:180px;">
               <input type="text" id="psColorText" value="rgba(255,255,255,.88)" />
@@ -126,29 +98,19 @@
             </div>
           </div>
 
-          <!-- (5) Szybkie kolory Prefix/Suffix (te same) -->
-          <div class="chips" id="psColorChips">
+          <div class="chips">
             <div class="chip" data-target="ps" data-color="#00ff66"><span style="background:#00ff66"></span>Zielony</div>
             <div class="chip" data-target="ps" data-color="#ff3333"><span style="background:#ff3333"></span>Czerwony</div>
             <div class="chip" data-target="ps" data-color="#d4af37"><span style="background:#d4af37"></span>Złoty</div>
             <div class="chip" data-target="ps" data-color="#ffffff"><span style="background:#ffffff"></span>Biały</div>
           </div>
 
-          <!-- (3) Wielkość fontu Prefix+Suffix -->
           <label>Wielkość fontu Prefix + Suffix (wspólna) — px</label>
           <input type="number" id="psFontSize" min="10" max="60" step="1" value="14" />
-
-          <div class="small">
-            Uwaga: logo ma stały rozmiar w Infoczytniku, więc tu go nie ruszamy.
-            Zmiana rozmiaru prefixu może spowodować zawijanie prefixu (OK), ale logo zostaje.
-          </div>
         </div>
 
-        <!-- PRAWA KOLUMNA -->
         <div class="col">
           <label>Losowość fillerów</label>
-
-          <!-- (4) NOWY układ: Suffix po prawej POD Prefix -->
           <div class="fillerBox">
             <div class="fillerTop">
               <input type="checkbox" id="randomFillers" checked />
@@ -156,7 +118,7 @@
             </div>
 
             <div class="fillerManual">
-              <div class="left">
+              <div>
                 <span class="miniLabel">Ręcznie</span>
                 <div class="pairRow">
                   <b>Prefix</b>
@@ -164,7 +126,7 @@
                 </div>
               </div>
 
-              <div class="right">
+              <div>
                 <div class="pairRow">
                   <b>Suffix</b>
                   <input type="number" id="suffixIndex" min="1" value="1" />
@@ -173,9 +135,7 @@
             </div>
           </div>
 
-          <div class="small">
-            Gdy losowanie wyłączone, wybierasz osobno numer Prefix i Suffix (1..N zależnie od frakcji).
-          </div>
+          <div class="small">Gdy losowanie wyłączone, wybierasz osobno numer Prefix i Suffix (1..N zależnie od frakcji).</div>
         </div>
       </div>
 
@@ -197,56 +157,42 @@
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.8/firebase-firestore-compat.js"></script>
+  <script type="module">
+    // Firebase (moduły ES) + osobny plik config
+    import { firebaseConfig } from "./config/firebase-config.js";
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCVoWzXtO-vipsxnvZlFkcqcNgYYuH3osc",
-      authDomain: "wh40k-data-slate.firebaseapp.com",
-      projectId: "wh40k-data-slate",
-      storageBucket: "wh40k-data-slate.firebasestorage.app",
-      messagingSenderId: "382792444120",
-      appId: "1:382792444120:web:9eb27e2ed29109ac838fad"
-    };
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+    import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    const currentRef = db.collection("dataslate").doc("current");
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const currentRef = doc(db, "dataslate", "current");
 
     const el = {
       faction: document.getElementById("faction"),
 
-      // treść wiadomości
       fontColor: document.getElementById("fontColor"),
       msgFontSize: document.getElementById("msgFontSize"),
 
-      // prefix/suffix styl
       psColorText: document.getElementById("psColorText"),
       psColorPicker: document.getElementById("psColorPicker"),
       psFontSize: document.getElementById("psFontSize"),
 
-      // fillery
       randomFillers: document.getElementById("randomFillers"),
       prefixIndex: document.getElementById("prefixIndex"),
       suffixIndex: document.getElementById("suffixIndex"),
 
-      // message
       message: document.getElementById("message"),
 
-      // buttons
       sendBtn: document.getElementById("sendBtn"),
       clearBtn: document.getElementById("clearBtn"),
       clearTextBtn: document.getElementById("clearTextBtn"),
       pingBtn: document.getElementById("pingBtn"),
 
-      // ui
       status: document.getElementById("status"),
       prefixPreview: document.getElementById("prefixPreview"),
       suffixPreview: document.getElementById("suffixPreview"),
 
-      // chips
       chips: Array.from(document.querySelectorAll(".chip")),
     };
 
@@ -282,7 +228,6 @@
     }
 
     function getPrefixSuffixColor(){
-      // używamy tekstowego jako "źródła prawdy" (bo może być rgba())
       const t = (el.psColorText.value || "").trim();
       return t || "rgba(255,255,255,.88)";
     }
@@ -295,7 +240,6 @@
       el.prefixPreview.textContent = cfg.prefixes[pIdx-1] || "";
       el.suffixPreview.textContent = cfg.suffixes[sIdx-1] || "";
 
-      // wygasz/odblokuj pola ręczne
       const manualDisabled = el.randomFillers.checked;
       el.prefixIndex.disabled = manualDisabled;
       el.suffixIndex.disabled = manualDisabled;
@@ -312,31 +256,26 @@
 
       setStatus("wysyłam…");
       try{
-        await currentRef.set({
+        await setDoc(currentRef, {
           type: isClear ? "clear" : "message",
           faction: el.faction.value,
 
-          // treść wiadomości
-          color: el.fontColor.value || "#00ff66",      // Infoczytnik zwykle czyta "color"
-          fontColor: el.fontColor.value || "#00ff66",  // zostawiamy też "fontColor" dla kompatybilności
+          color: el.fontColor.value || "#00ff66",
+          fontColor: el.fontColor.value || "#00ff66",
           msgFontSize: msgFontPx + "px",
 
-          // prefix/suffix styl (wspólny)
           prefixColor: getPrefixSuffixColor(),
           suffixColor: getPrefixSuffixColor(),
           prefixFontSize: psFontPx + "px",
           suffixFontSize: psFontPx + "px",
 
-          // fillery
           prefixIndex, suffixIndex,
 
-          // tekst
           text: isClear ? "" : (el.message.value || ""),
 
-          // meta
           nonce: nonce(),
-          ts: firebase.firestore.FieldValue.serverTimestamp()
-        }, { merge:false });
+          ts: serverTimestamp()
+        });
 
         setStatus(isClear ? "wyczyszczono" : "wysłano");
       }catch(e){
@@ -353,21 +292,21 @@
 
       setStatus("ping…");
       try{
-        await currentRef.set({
+        await setDoc(currentRef, {
           type:"ping",
           faction: el.faction.value,
 
-          // zachowujemy też styl, żeby po pingach nie „gubić” ustawień po stronie infoczytnika
           color: el.fontColor.value || "#00ff66",
           fontColor: el.fontColor.value || "#00ff66",
           msgFontSize: msgFontPx + "px",
+
           prefixColor: getPrefixSuffixColor(),
           suffixColor: getPrefixSuffixColor(),
           prefixFontSize: psFontPx + "px",
           suffixFontSize: psFontPx + "px",
 
           nonce: nonce(),
-          ts: firebase.firestore.FieldValue.serverTimestamp()
+          ts: serverTimestamp()
         }, { merge:true });
 
         setStatus("ping wysłany");
@@ -378,7 +317,6 @@
       }
     }
 
-    // ====== EVENTY ======
     el.sendBtn.addEventListener("click", () => sendMessage(false));
     el.clearBtn.addEventListener("click", () => sendMessage(true));
     el.pingBtn.addEventListener("click", ping);
@@ -388,7 +326,6 @@
       el.message.focus();
     });
 
-    // chips (dla msg i ps)
     el.chips.forEach(ch => ch.addEventListener("click", () => {
       const target = ch.getAttribute("data-target");
       const c = ch.getAttribute("data-color");
@@ -398,14 +335,12 @@
         el.fontColor.value = c;
       }else if(target === "ps"){
         el.psColorText.value = c;
-        // jeśli da się, zsynchronizuj picker (tylko dla hex)
         if(/^#([0-9a-f]{3}|[0-9a-f]{6})$/i.test(c)){
           el.psColorPicker.value = c.length===4 ? ("#" + c[1]+c[1]+c[2]+c[2]+c[3]+c[3]) : c;
         }
       }
     }));
 
-    // picker prefix/suffix -> ustawia tekst na #RRGGBB
     el.psColorPicker.addEventListener("input", () => {
       el.psColorText.value = el.psColorPicker.value;
     });
